--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <link
     rel="icon"
     type="image/png"
-    href="img/Google-favicon.svg"
+    href="https://raw.githubusercontent.com/TNguyen20194/Promotional-Email/9a8445d4ed14f2a840ad29f4788f0414e37838a4/img/Google-favicon.svg"
   />
      <!-- Google Fonts -->
      <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -177,7 +177,7 @@
                             <table class="logo-row" id="logo-row" role="presentation" width="100%" border="0" border-spacing="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse; background-color: #F8E1D8;">
                                 <tr>
                                     <td class="logo" align="center" style=" width: 100% ;padding-top: 19px; padding-bottom: 19px;">
-                                        <img src="img/Google-Title.png" alt="Google Store Logo" style="display:block; border: none ; height: 30px; border: none; outline: none">
+                                        <img src="https://github.com/TNguyen20194/Promotional-Email/blob/main/img/Google-Title.png?raw=true" alt="Google Store Logo" style="display:block; border: none ; height: 30px; border: none; outline: none">
                                     </td>
                                 </tr>
                             </table>
@@ -228,7 +228,7 @@
                                         <!-- /Spacer -->
                                         <tr>
                                             <td align="center" style="padding: 0; width: 100%; font-size: 0;">
-                                                <img src="img/Hero-Pixel-Pro_Large.png" class="hero-image" alt="Image of Buds Pro" style="display: block;width: 100%; max-width: 320px; height: auto;" width="600">
+                                                <img src="https://github.com/TNguyen20194/Promotional-Email/blob/main/img/Hero-Pixel-Pro_Large.png?raw=true" class="hero-image" alt="Image of Buds Pro" style="display: block;width: 100%; max-width: 320px; height: auto;" width="600">
                                             </td>
                                         </tr>
                                     </td>                                        
@@ -259,7 +259,7 @@
                                                                 <table class="content" role="presentation" width="100%" border="0" border-spacing="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse">
                                                                     <tr>
                                                                         <td class="content__image" align="right" style="padding: 0;" width="50%" valign="top">
-                                                                            <img src="img/Tune-in.png" alt="Picture of person working and wearing Buds Pro" style=" border: none; outline: none; ;display: block; width: 100%; max-width: 350px; font-size: 0;" width="350" height="100%">
+                                                                            <img src="https://github.com/TNguyen20194/Promotional-Email/blob/main/img/Tune-in.png?raw=true" alt="Picture of person working and wearing Buds Pro" style=" border: none; outline: none; ;display: block; width: 100%; max-width: 350px; font-size: 0;" width="350" height="100%">
                                                                         </td>
                                                                     </tr>
                                                                 </table>
@@ -324,7 +324,7 @@
                                                    <table class="buds-pro__handsfree-container" role="presentation" width="100%" height="100%" border="0" border-spacing="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse; text-align: center; border-radius: 12px; overflow: hidden; background-color: #f9e8e3;">
                                                         <tr>
                                                             <td class="image" align="left" style="padding: 0; width: 100%; font-size: 0;" valign="top">
-                                                                <img src="img/Hands-Free.png" alt="Picture of a man wearing Buds Pro while taking photos" style="border: none;
+                                                                <img src="https://github.com/TNguyen20194/Promotional-Email/blob/main/img/Hands-Free.png?raw=true" alt="Picture of a man wearing Buds Pro while taking photos" style="border: none;
                                                                 outline: none; display: block; width: 100%; max-width: 276px; height: auto; font-size: 0;" width="276">
                                                             </td>
                                                         </tr>
@@ -369,7 +369,7 @@
                                                     <table class="buds-pro__made-for-you-container" role="presentation" width="100%" height="100%" border="0" border-spacing="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse; text-align: left; border-radius: 12px; overflow: hidden; background-color: #f9fcdf;">
                                                          <tr>
                                                              <td class="image" align="left" style="padding: 0; width: 100%; font-size: 0;" valign="top">
-                                                                 <img src="img/Made-For-You.png" alt="Picture of a woman wearing Buds Pro while working out" style="border: none;
+                                                                 <img src="https://github.com/TNguyen20194/Promotional-Email/blob/main/img/Made-For-You.png?raw=true" alt="Picture of a woman wearing Buds Pro while working out" style="border: none;
                                                                  outline: none; display: block; width: 100%; max-width: 276px; height: auto; font-size: 0;" width="276">
                                                              </td>
                                                          </tr>
@@ -443,7 +443,7 @@
                                 </tr>
                                 <tr>
                                     <td class="bg-image" align="center" style="padding: 0; width: 100%; font-size: 0;">
-                                        <img src="img/Pixel-bud-Options-2.png" alt="Image of Pixel Buds Pro" style="display: block;width: 100%; max-width: 400px; height: auto;" width="400">
+                                        <img src="https://github.com/TNguyen20194/Promotional-Email/blob/main/img/Pixel-bud-Options-2.png?raw=true" alt="Image of Pixel Buds Pro" style="display: block;width: 100%; max-width: 400px; height: auto;" width="400">
                                     </td>
                                 </tr>
                             </table>
@@ -503,7 +503,7 @@
                                                                                         <table role="presentation" border="0" border-spacing="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse;">
                                                                                             <tr>
                                                                                                 <td align="left" style="padding: 0; font-size: 0; width: 100%; padding-top: 20px; padding-bottom: 20px;">
-                                                                                                    <img src="img/Google-One.png" class="google-store-img" alt="Goole One" style="width: 40px; height: 40px; display: block;">
+                                                                                                    <img src="https://github.com/TNguyen20194/Promotional-Email/blob/main/img/Google-One.png?raw=true" class="google-store-img" alt="Goole One" style="width: 40px; height: 40px; display: block;">
                                                                                                 </td>
                                                                                             </tr>
                                                                                             <tr>
@@ -562,7 +562,7 @@
                                                                                         <table role="presentation" border="0" border-spacing="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse;">
                                                                                             <tr>
                                                                                                 <td align="left" style="padding: 0; font-size: 0; width: 100%; padding-top: 20px; padding-bottom: 20px;">
-                                                                                                    <img src="img/Financing.png" alt="Financing" class="google-store-img" style="width: 40px; height: 40px; display: block;">
+                                                                                                    <img src="https://raw.githubusercontent.com/TNguyen20194/Promotional-Email/main/img/Financing.png" alt="Financing" class="google-store-img" style="width: 40px; height: 40px; display: block;">
                                                                                                 </td>
                                                                                             </tr>
                                                                                             <tr>
@@ -621,7 +621,7 @@
                                                                                         <table role="presentation" border="0" border-spacing="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse;" width="100%">
                                                                                             <tr>
                                                                                                 <td align="left" style="padding: 0; font-size: 0; width: 100%; padding-top: 20px; padding-bottom: 20px;">
-                                                                                                    <img src="img/Free-Shipping.png" class="google-store-img" alt="Free Shipping" style="width: 40px; height: 40px; display: block;">
+                                                                                                    <img src="https://github.com/TNguyen20194/Promotional-Email/blob/main/img/Free-Shipping.png?raw=true" class="google-store-img" alt="Free Shipping" style="width: 40px; height: 40px; display: block;">
                                                                                                 </td>
                                                                                             </tr>
                                                                                             <tr>
@@ -683,7 +683,7 @@
                                         <table role="presentation" width="100%" height="100%" border="0" border-spacing="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse; text-align: center;">
                                             <tr>
                                                 <td align="left" style="padding: 0; border-collapse: collapse; text-align: center; vertical-align: top;">
-                                                    <img src="img/Leaf-dual-tone.png" alt="image of dual tone leaf" style="font-size: 0; display: inline-block; width: 20px; height: 20px; vertical-align: middle; padding: 0 12px 0 0;" > 
+                                                    <img src="https://github.com/TNguyen20194/Promotional-Email/blob/main/img/Leaf-dual-tone.png?raw=true" alt="image of dual tone leaf" style="font-size: 0; display: inline-block; width: 20px; height: 20px; vertical-align: middle; padding: 0 12px 0 0;" > 
                                                     <p style="font-size: 13px; line-height: 22px; font-weight: 400; display: inline-block; vertical-align: middle; padding: 0; margin: 0;">Nest and Pixel devices introduced since 2020 include between 9% and 68%</p>
                                                 </td>
                                             </tr>
@@ -705,10 +705,10 @@
                                         <table role="presentation" width="100%" height="100%" border="0" border-spacing="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse; text-align: center; ">
                                             <tr>
                                                 <td align="center" style="padding: 0;">
-                                                    <a href="#"><img src="img/Youtube.png" alt="Follow on YouTube" style="border:none; font-size: 0; width: 50px; height: 50px;"></a>
-                                                    <a href="#"><img src="img/Facebook.png" alt="Follow on Facebook"  style="border:none;font-size: 0; width: 50px; height: 50px;"></a>
-                                                    <a href="#"><img src="img/Twitter.png" alt="Follow on Twitter" style="border:none;font-size: 0; width: 50px; height: 50px;" ></a>
-                                                    <a href="#"><img src="img/Instagram.png" alt="Follow on Instagram"  style="border:none;font-size: 0; width: 50px; height: 50px;"></a>
+                                                    <a href="#"><img src="https://github.com/TNguyen20194/Promotional-Email/blob/main/img/Youtube.png?raw=true" alt="Follow on YouTube" style="border:none; font-size: 0; width: 50px; height: 50px;"></a>
+                                                    <a href="#"><img src="https://raw.githubusercontent.com/TNguyen20194/Promotional-Email/main/img/Facebook.png" alt="Follow on Facebook"  style="border:none;font-size: 0; width: 50px; height: 50px;"></a>
+                                                    <a href="#"><img src="https://github.com/TNguyen20194/Promotional-Email/blob/main/img/Twitter.png?raw=true" alt="Follow on Twitter" style="border:none;font-size: 0; width: 50px; height: 50px;" ></a>
+                                                    <a href="#"><img src="https://github.com/TNguyen20194/Promotional-Email/blob/main/img/Instagram.png?raw=true" alt="Follow on Instagram"  style="border:none;font-size: 0; width: 50px; height: 50px;"></a>
                                                 </td>
                                             </tr>
                                         </table>
@@ -730,9 +730,9 @@
                                         <table role="presentation" width="100%" height="100%" border="0" border-spacing="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse; text-align: center; ">
                                             <tr>
                                                 <td align="center" style="padding: 0;">
-                                                    <a href="#"><img src="img/Happy.png" alt="Happy with the email" style="border:none; font-size: 0; width: 50px; height: 50px;"></a>
-                                                    <a href="#"><img src="img/Neutral.png" alt="Indifferent about the email"  style="border:none;font-size: 0; width: 50px; height: 50px;"></a>
-                                                    <a href="#"><img src="img/Sad.png" alt="Not ahppy about the email" style="border:none;font-size: 0; width: 50px; height: 50px;" ></a>
+                                                    <a href="#"><img src="https://github.com/TNguyen20194/Promotional-Email/blob/main/img/Happy.png?raw=true" alt="Happy with the email" style="border:none; font-size: 0; width: 50px; height: 50px;"></a>
+                                                    <a href="#"><img src="https://github.com/TNguyen20194/Promotional-Email/blob/main/img/Neutral.png?raw=true" alt="Indifferent about the email"  style="border:none;font-size: 0; width: 50px; height: 50px;"></a>
+                                                    <a href="#"><img src="https://github.com/TNguyen20194/Promotional-Email/blob/main/img/Sad.png?raw=true" alt="Not ahppy about the email" style="border:none;font-size: 0; width: 50px; height: 50px;" ></a>
                                                 </td>
                                             </tr>
                                         </table>
