--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
         }
         .content__info {
             padding-bottom: 40px !important;
-            padding-right: 25px !important;
-            padding-left: 25px !important;
+            padding-right: 18px !important;
+            padding-left: 18px !important;
         }
         .sub-head {
             font-size: 14px !important;
@@ -114,8 +114,8 @@
         }
         .content-row {
             padding-bottom: 40px !important;
-            padding-right: 25px !important;
-            padding-left: 25px !important;
+            padding-right: 18px !important;
+            padding-left: 18px !important;
         }
         .content-row__info {
             text-align: center;
@@ -130,6 +130,9 @@
             max-width: 600px !important;
             width: 100% !important;
             height: auto !important;
+        }
+        .get-more-row {
+            padding: 32px 40px 26px 40px !important;
         }
         .bg-image img {
             max-width: 100% !important;
@@ -472,7 +475,7 @@
                                     <td align="center" style="padding: 0;"> 
                                         <table role="presentation" width="100%" height="100%" border="0" border-spacing="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse;">
                                             <tr>
-                                                <td align="center" valign="top" style="padding: 40px 40px 24px 40px;">
+                                                <td class="get-more-row" align="center" valign="top" style="padding: 40px 40px 24px 40px;">
                                                     <h4 style="font-size: 20px; line-height: 30px; color: #423F3F; font-weight: 700; margin: 0 0 10px 0; margin: 0;">
                                                         Get more when you shop on the Google Store. 
                                                     </h4>
