--- a/index.html
+++ b/index.html
@@ -69,6 +69,9 @@
         .hero-content {
             padding: 0 15px 0 15px !important;
         }
+        .headline .h1 {
+            font-size: 36px !important;
+        }
         .hero-image {
             max-width: 100% !important;
         }
@@ -121,7 +124,7 @@
             text-align: center;
         }
         .content-row__info h4{
-            font-size: 21px !important;
+            font-size: 19px !important;
         }
         .content-row__info p{
             font-size: 14px !important;
