--- a/index.html
+++ b/index.html
@@ -75,6 +75,9 @@
         .hero-image {
             max-width: 100% !important;
         }
+        .immersive-sound {
+            width: 85% !important;
+        }
         .tune-in-table.left{
             min-height: auto !important;
             height: auto !important;
@@ -250,7 +253,13 @@
                             <table role="presentation" width="100%" border="0" border-spacing="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse;">
                                 <tr>
                                     <td align="center" style="padding: 0;">
-                                        <h3 style="font-size: 22px; line-height: 30px; color: #3C4043; font-weight: 700; margin: 0 0 20px 0;">Immersive sound with you at the center.</h3>
+                                        <table class="immersive-sound" role="presentation" width="100%" border="0" border-spacing="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse;">
+                                            <tr>
+                                                <td align="center" style="padding: 0;">
+                                                    <h3 style="font-size: 22px; line-height: 30px; color: #3C4043; font-weight: 700; margin: 0 0 20px 0;">Immersive sound with you at the center.</h3>
+                                                </td>
+                                            </tr>
+                                        </table>
                                     </td>
                                 </tr>
                                 <!-- Start of Content First Row -->
