--- a/index.html
+++ b/index.html
@@ -120,8 +120,8 @@
         }
         .content-row {
             padding-bottom: 40px !important;
-            padding-right: 18px !important;
-            padding-left: 18px !important;
+            padding-right: 13px !important;
+            padding-left: 13px !important;
         }
         .content-row__info {
             text-align: center;
@@ -346,7 +346,7 @@
                                                         <!-- Content -->
                                                         <tr>
                                                             <td class="content-row" style="padding: 24px 15px 28px 15px;" valign="top">
-                                                                <table role="presentation" width="100%" height="100%" border="0" border-spacing="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse">
+                                                                <table role="presentation" width="100%" height="100%" border="0" border-spacing="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse; height: 125px;">
                                                                     <tr>
                                                                         <td class="content-row__info" align="left" style="padding: 0;">
                                                                             <h4 style="font-size: 18px; line-height: 30px; color: #3C4043; font-weight: 700; margin: 0 0 10px 0;">
@@ -391,7 +391,7 @@
                                                          <!-- Content -->
                                                          <tr>
                                                              <td class="content-row" style="padding: 24px 15px 28px 15px;" valign="top">
-                                                                <table role="presentation" width="100%" height="100%" border="0" border-spacing="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse">
+                                                                <table role="presentation" width="100%" height="100%" border="0" border-spacing="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse; height: 125px;">
                                                                     <tr>
                                                                         <td class="content-row__info" align="left" style="padding: 0;">
                                                                             <h4 style="font-size: 18px; line-height: 30px; color: #3C4043; font-weight: 700; margin: 0 0 10px 0;">
