--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         word-spacing: normal;
     }
 
-    table, td, div, h1, p {font-family: 'Open Sans', Roboto, Helvetica, Arial, sans-serif;}
+    table, td, div, h1, h2, h3, h4, p {font-family: 'Open Sans', Roboto, Helvetica, Arial, sans-serif;}
 
    table, td {
       border-collapse: collapse !important;
