--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
     <!-- ==========>> Email Start <<==========  -->
     <table role="presentation" width="100%" border="0" border-spacing="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse;">
         <tr>
-            <td align="center" style="padding: 0;">
+            <td align="center" style="padding: 20px 0 60px 0;">
                 <!-- Email Container -->
                 <table role="presentation" class="container" width="600" style="width:100%; max-width: 600px; " align="center" border="0" cellpadding="0" cellspacing="0">
                     <!-- ==========>> Start of Google Store Header <<==========  -->
